tests/frontend/fail/array/atomic_array_assignment.act
contract B

constructor
interface constructor()

creates

  uint x := [1]
